# archived-cicn

./: .gitignore  .gitreview  AUTHORS  CMakeLists.txt  INFO.yaml  Makefile  README.md  bootstrap.sh  config.h.in  config.hpp.in  debug.h  dockerfile.ubuntu.xenial  main.cc  main.cpp  player.conf  requirements.txt  setup.py  update.sh  viper.pro  viper.qrc
HttpServer/app/: CMakeLists.txt  build.gradle  httpserver.keystore
MetisForwarder/app/: CMakeLists.txt  build.gradle  metisforwarder.keystore  proguard-rules.pro
apps/consumers/: CMakeLists.txt  icnet_consumer_dash.cc  icnet_consumer_hello_world.cc  icnet_consumer_test.cc  icnet_iget.cc  icnet_ping_client.cc
apps/iping/: CMakeLists.txt  client.keystore  iPing_Client.c  iPing_Common.c  iPing_Common.h  iPing_Server.c  iPing_Stats.c  iPing_Stats.h
apps/producers/: CMakeLists.txt  icnet_ping_server.cc  icnet_producer_hello_world.cc  icnet_producer_test.cc
cicn-plugin/: .gitignore  CMakeLists.txt  Makefile.am  configure.ac
cicn-plugin/cicn/: cicn.api  cicn.c  cicn.h  cicn_all_api_h.h  cicn_api.h  cicn_api_handler.h  cicn_api_test.c  cicn_face.c  cicn_face.h  cicn_fib.c  cicn_fib.h  cicn_hashtb.c  cicn_hashtb.h  cicn_hello.c  cicn_hello.h  cicn_hello_inlines.h  cicn_infra.h  cicn_infra_inlines.h  cicn_mgmt.c  cicn_mgmt.h  cicn_msg_enum.h  cicn_params.h  cicn_parser.c  cicn_parser.h  cicn_pcs.c  cicn_pcs.h  cicn_pg.c  cicn_rte_mbuf.h  cicn_rte_mbuf_inlines.h  cicn_siphash.h  cicn_std.h  cicn_types.h  node.c
cicn-plugin/scripts/: build-package.sh  version
cicn-plugin/test/: README  icn_pg
emu-radio/: CMakeLists.txt  README.md
emu-radio/common-library/: communication-protocol.cc  communication-protocol.h  connection-pool.cc  connection-pool.h  emulator.h  query.cc  query.h  tcp-server.cc  tcp-server.h  websocket-server.cc  websocket-server.h
emu-radio/lte-emulator/: CMakeLists.txt  lte_main.cc
emu-radio/ns3-packages/: libns3sx-dev_3.24.1-6~xenial_amd64.deb  libns3sx-dev_3.24.1-8~xenial_amd64.deb  ns3sx_3.24.1-6~xenial_amd64.deb  ns3sx_3.24.1-8~xenial_amd64.deb
emu-radio/ns3-patch/: README.md  epc-tft-classifier.cc  tap-bridge.cc
emu-radio/scripts/: build-package.sh
emu-radio/wifi-emulator/: CMakeLists.txt
iGetAndroid/app/: CMakeLists.txt  build.gradle  iget.keystore
icnet/: CMakeLists.txt
icnet/ccnx/: icnet_ccnx_common.h  icnet_ccnx_content_object.cc  icnet_ccnx_content_object.h  icnet_ccnx_facade.h  icnet_ccnx_interest.cc  icnet_ccnx_interest.h  icnet_ccnx_key_locator.cc  icnet_ccnx_key_locator.h  icnet_ccnx_key_locator_type.h  icnet_ccnx_local_connector.cc  icnet_ccnx_local_connector.h  icnet_ccnx_manifest.cc  icnet_ccnx_manifest.h  icnet_ccnx_name.cc  icnet_ccnx_name.h  icnet_ccnx_network_message.cc  icnet_ccnx_network_message.h  icnet_ccnx_payload_type.h  icnet_ccnx_pending_interest.cc  icnet_ccnx_pending_interest.h  icnet_ccnx_portal.cc  icnet_ccnx_portal.h  icnet_ccnx_segment.cc  icnet_ccnx_segment.h
icnet/errors/: icnet_errors.h  icnet_errors_malformed_name_exception.cc  icnet_errors_malformed_name_exception.h  icnet_errors_malformed_packet_exception.cc  icnet_errors_malformed_packet_exception.h  icnet_errors_not_implemented_exception.cc  icnet_errors_not_implemented_exception.h  icnet_errors_runtime_exception.cc  icnet_errors_runtime_exception.h  icnet_errors_tokenizer_exception.cc  icnet_errors_tokenizer_exception.h
icnet/http/: icnet_http_client_connection.cc  icnet_http_client_connection.h  icnet_http_default_values.h  icnet_http_facade.h  icnet_http_message.h  icnet_http_request.cc  icnet_http_request.h  icnet_http_response.cc  icnet_http_response.h  icnet_http_server_acceptor.cc  icnet_http_server_acceptor.h  icnet_http_server_publisher.cc  icnet_http_server_publisher.h
icnet/transport/: icnet_content_store.cc  icnet_content_store.h  icnet_download_observer.h  icnet_rate_estimation.cc  icnet_rate_estimation.h  icnet_socket.h  icnet_socket_consumer.cc  icnet_socket_consumer.h  icnet_socket_options_default_values.h  icnet_socket_options_keys.h  icnet_socket_producer.cc  icnet_socket_producer.h  icnet_transport.cc  icnet_transport.h  icnet_transport_common.h  icnet_transport_content_store.cc  icnet_transport_content_store.h  icnet_transport_download_observer.h  icnet_transport_protocol.cc  icnet_transport_protocol.h  icnet_transport_raaqm.cc  icnet_transport_raaqm.h  icnet_transport_raaqm_data_path.cc  icnet_transport_raaqm_data_path.h  icnet_transport_rate_estimation.cc  icnet_transport_rate_estimation.h  icnet_transport_socket.h  icnet_transport_socket_consumer.cc  icnet_transport_socket_consumer.h  icnet_transport_socket_options_default_values.h  icnet_transport_socket_options_keys.h  icnet_transport_socket_producer.cc  icnet_transport_socket_producer.h  icnet_transport_vegas.cc  icnet_transport_vegas.h  icnet_transport_vegas_rto_estimator.cc  icnet_transport_vegas_rto_estimator.h
icnet/utils/: icnet_utils_array.cc  icnet_utils_array.h  icnet_utils_daemonizator.cc  icnet_utils_daemonizator.h  icnet_utils_hash.cc  icnet_utils_hash.h  icnet_utils_sharable_vector.h  icnet_utils_string_tokenizer.cc  icnet_utils_string_tokenizer.h  icnet_utils_uri.cc  icnet_utils_uri.h
libccnx-common/: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
libccnx-common/documentation/: .gitignore  CMakeLists.txt  Makefile.am  libccnx-stage1.doxygen.in  libccnx-stage2.doxygen.in  libccnx_api_control-stage2.doxygen  libccnx_api_notify-stage2.doxygen  libccnx_api_portal-stage2.doxygen  librta-stage2.doxygen
libccnx-common/scripts/: build-package.sh  version
libccnx-portal/: .gitignore  AUTHORS  CMakeLists.txt  README.md
libccnx-portal/documentation/: CMakeLists.txt  libccnx_api_portal-stage1.doxygen.in  libccnx_api_portal-stage2.doxygen.in  stylesheet.css
libccnx-portal/scripts/: build-package.sh  version
libccnx-transport-rta/: .gitignore  AUTHORS  CMakeLists.txt  README.md
libdash/: CMakeLists.txt
libparc/: .gitignore  AUTHORS  CMakeLists.txt  README.md
longbow/: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
metis/: .gitignore  AUTHORS  CMakeLists.txt  LICENSE
(+2178 files in other folders)
